Fixed wrong height for pieces

--- a/src/main/resources/web/public/components/blockplus/network/mobile.css
+++ b/src/main/resources/web/public/components/blockplus/network/mobile.css
@@ -23,17 +23,17 @@ img {
 
 #content {
 	margin: 0 auto;
-	margin-top: 50px;
 	background-color: #2a2d30;
 	overflow: hidden;
-	/*
+	
 	width: 320px;
 	height: 455px;
-	*/
+	
 	width: 392px;
 	height: 576px;
-	border: 5px solid white;
 	
+	margin-top: 50px;
+	border: 5px solid white;
 	border-radius: 10px;
 }
 
@@ -52,7 +52,7 @@ img {
 }
 
 #pieces {
-	margin-top: 4px;
+	margin-top: 0px;
 }
 
 #control-panel {
@@ -83,12 +83,12 @@ img {
 	width: 25%;
 	float: left;
 	font-family: sans-serif;
-	font-size: 130%;
+	font-size: 125%;
 	text-align: center;
 	color: white;
 	cursor: pointer;	
-	line-height: 40px;
-	height: 40px;
+	line-height: 33px;
+	height: 33px;
 }
 
 .available {
